PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 7.8.0-Folldal
14 February 2018

pts-core: Various minor fixes
pts_Graph: Fix vertical bar graphs on many bars to be rendered

Phoronix Test Suite 7.8.0 Milestone 3
5 February 2018

pts-core: Fix crash in stress-run when PHP PCNTL is missing
pts-core: When installing a test that is marked deprecated/experimental/broken, ensure to convey that to the user
pts-core: When installing a test that is of license retail/restricted, ensure to convey that to the user
pts-core: Don't show tests in `list-available-tests` / `list-tests` that are not verified
pts-core: Improvements to `info` sub-command for test profiles in highlighting tests that may have problems and also show pre/post messages
pts_Graph: Fix when manually forcing line graphs sometimes still yielding bar graphs
phodevi: spectre_v1 and spectre_v2 protection reporting
phodevi: LXQt desktop detection
phodevi: Don't cache the compiler in case external dependencies install a new compiler, etc

Phoronix Test Suite 7.8.0 Milestone 2
14 January 2018

pts-core: Allow local/other tests not part of OpenBenchmarking.org to be downloaded from a Phoromatic Server
pts-core: Fixes for make-download-cache sometimes not caching tests/suites
pts-core: Drop the pts_test_notes_manager since pts_test_run_manager already had better capabilities built-in
pts-core: Add dump-phodevi-properties helper to assist in debugging and porting to new platforms
pts-core: Interactive mode improvements
pts-core: The `phoronix-test-suite gui` has been unmaintained and can be considered deprecated
pts-core: Add `phoronix-test-suite search` for conducting basic searches from the CLI
pts-core: When running `phoronix-test-suite info <test profile>`, show the OpenBenchmarking.org change-log for that test profile too
pts-core: When running `phoronix-test-suite info <test profile>`, show local test results containing this test
phodevi: Append BIOS version to end of motherboard string